docs/refs/script-api/server-ui/0.1.0/messageformdata.md
# `MessageFormData`

> 文档版本：1.21.50.25

`MessageFormData`类。script_api.mojang-minecraft-ui.messageformdata.description

## 方法

/// define
`body`


///

script_api.mojang-minecraft-ui.messageformdata.body.description

```js
body(bodyText: string): MessageFormData
```

/// html | div.result
//// define
`bodyText`：`string`

- script_api.mojang-minecraft-ui.messageformdata.body.bodytext.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.mojang-minecraft-ui.messageformdata.body.return


////

///


/// define
`button1`


///

script_api.mojang-minecraft-ui.messageformdata.button1.description

```js
button1(text: string): MessageFormData
```

/// html | div.result
//// define
`text`：`string`

- script_api.mojang-minecraft-ui.messageformdata.button1.text.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.mojang-minecraft-ui.messageformdata.button1.return


////

///


/// define
`button2`


///

script_api.mojang-minecraft-ui.messageformdata.button2.description

```js
button2(text: string): MessageFormData
```

/// html | div.result
//// define
`text`：`string`

- script_api.mojang-minecraft-ui.messageformdata.button2.text.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.mojang-minecraft-ui.messageformdata.button2.return


////

///


/// define
`constructor`


///

script_api.mojang-minecraft-ui.messageformdata.constructor.description

```js
new constructor(): MessageFormData
```

/// html | div.result
//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.mojang-minecraft-ui.messageformdata.constructor.return


////

///


/// define
`show`


///

script_api.mojang-minecraft-ui.messageformdata.show.description

```js
show(player: Player): Promise<MessageFormResponse>
```

/// html | div.result
//// define
`player`：[`Player`](../../server/0.1.0/player.md)

- script_api.mojang-minecraft-ui.messageformdata.show.player.description


////

//// define
返回值：<code>Promise&lt;<a href="../messageformresponse/">MessageFormResponse</a>&gt;</code>

- script_api.mojang-minecraft-ui.messageformdata.show.return


////

///


/// define
`title`


///

script_api.mojang-minecraft-ui.messageformdata.title.description

```js
title(titleText: string): MessageFormData
```

/// html | div.result
//// define
`titleText`：`string`

- script_api.mojang-minecraft-ui.messageformdata.title.titletext.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.mojang-minecraft-ui.messageformdata.title.return


////

///

