docs/refs/script-api/server-ui/1.0.0/messageformdata.md
# `MessageFormData`

> 文档版本：1.21.60.21

`MessageFormData`类。script_api.@minecraft/server-ui.messageformdata.description

## 方法

/// define
`body`


///

script_api.@minecraft/server-ui.messageformdata.body.description

```js
body(bodyText: RawMessage | string): MessageFormData
```

/// html | div.result
//// define
`bodyText`：[`RawMessage`](../../server/1.2.0/rawmessage.md)|`string`

- script_api.@minecraft/server-ui.messageformdata.body.bodytext.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.@minecraft/server-ui.messageformdata.body.return


////

///


/// define
`button1`


///

script_api.@minecraft/server-ui.messageformdata.button1.description

```js
button1(text: RawMessage | string): MessageFormData
```

/// html | div.result
//// define
`text`：[`RawMessage`](../../server/1.2.0/rawmessage.md)|`string`

- script_api.@minecraft/server-ui.messageformdata.button1.text.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.@minecraft/server-ui.messageformdata.button1.return


////

///


/// define
`button2`


///

script_api.@minecraft/server-ui.messageformdata.button2.description

```js
button2(text: RawMessage | string): MessageFormData
```

/// html | div.result
//// define
`text`：[`RawMessage`](../../server/1.2.0/rawmessage.md)|`string`

- script_api.@minecraft/server-ui.messageformdata.button2.text.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.@minecraft/server-ui.messageformdata.button2.return


////

///


/// define
`constructor`


///

script_api.@minecraft/server-ui.messageformdata.constructor.description

```js
new constructor(): MessageFormData
```

/// html | div.result
//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.@minecraft/server-ui.messageformdata.constructor.return


////

///


/// define
`show`


///

script_api.@minecraft/server-ui.messageformdata.show.description

```js
show(player: Player): Promise<MessageFormResponse>
```

/// html | div.result
//// define
`player`：[`Player`](../../server/1.2.0/player.md)

- script_api.@minecraft/server-ui.messageformdata.show.player.description


////

//// define
返回值：<code>Promise&lt;<a href="../messageformresponse/">MessageFormResponse</a>&gt;</code>

- script_api.@minecraft/server-ui.messageformdata.show.return


////

///


/// define
`title`


///

script_api.@minecraft/server-ui.messageformdata.title.description

```js
title(titleText: RawMessage | string): MessageFormData
```

/// html | div.result
//// define
`titleText`：[`RawMessage`](../../server/1.2.0/rawmessage.md)|`string`

- script_api.@minecraft/server-ui.messageformdata.title.titletext.description


////

//// define
返回值：[`MessageFormData`](./messageformdata.md)

- script_api.@minecraft/server-ui.messageformdata.title.return


////

///

